friends to user first draft
